<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activityRoot"
    tools:context="com.tudev.firstapp.EditContactActivity">

    <include android:id="@+id/contactEdit_layout_toolbar"
        layout="@layout/appcompat_toolbar"/>

    <ImageView
        android:layout_marginTop="20dp"
        style="@style/ContactIcon"
        android:layout_gravity="center_horizontal"
        android:id="@+id/editImageView"
        android:src="@mipmap/ic_account_box_black_48dp"
        android:contentDescription="@string/editImageView_descr" />

    <TextView
        style="@style/TextBase"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/image_change_text"
        android:id="@+id/textView"/>

    <FrameLayout style="@style/contactFrameLayout">

        <TextView
            style="@style/TextBase.Left"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/name_label"
            android:id="@+id/textView3" />

        <EditText
            style="@style/TextBase.Right"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameEditText"
            android:hint="@string/name_hint" />

    </FrameLayout>

    <FrameLayout style="@style/contactFrameLayout">

        <TextView
            style="@style/TextBase.Left"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/email_label"
            android:id="@+id/textView4" />

        <EditText
            style="@style/TextBase.Right"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editEmailText"
            android:hint="@string/email_hint"/>

    </FrameLayout>


    <FrameLayout style="@style/contactFrameLayout" >

        <TextView
            style="@style/TextBase.Left"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/phone_label"
            android:id="@+id/textView6"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editPhoneText"
            android:hint="@string/phone_hint"/>

    </FrameLayout>

    <FrameLayout style="@style/contactFrameLayout"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/date_label"
            android:id="@+id/textView7"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">

            <TextView
                style="@style/TextBase.Left"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/editDate_label"
                android:id="@+id/editDateTextLabel"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:contentDescription="@string/editDate_contentDescription"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_edit_black_48px"
                android:id="@+id/editDateButton"/>

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp">

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/accept_button"
            android:id="@+id/buttonAcceptEdit"/>
    </FrameLayout>

</LinearLayout>
